[package]
name = "rs_envflag_macros"
version = "0.4.1"
edition = "2021"
license-file = "LICENSE"
description = "An easy way to define flags by environment variables"
repository = "https://github.com/TimeExceed/rsenvflag"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["flag"]

[lib]
proc-macro = true

[dependencies]
rs_envflag = "0.4"
